# chatty

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  NEWS  README.md  chatty.doap  meson.build  meson_options.txt  sm.puri.Chatty.json
.gitlab-ci/: README.md  run-docker.sh
completion/: chatty
data/: meson.build  sm.puri.Chatty-daemon.desktop.in.in  sm.puri.Chatty.desktop.in  sm.puri.Chatty.desktop.in.in  sm.puri.Chatty.gschema.xml  sm.puri.Chatty.metainfo.xml.in  sm.puri.Chatty.metainfo.xml.in.in  sm.puri.Chatty.service.in
data/icons/: meson.build
data/screenshots/: README.md
debian/: README.source  changelog  control  copyright  gbp.conf  rules  shlibs.local  watch
debian/patches/: 0001-Disable-Clock-History-and-pgp-tests.patch  0001-Disable-clock-test.patch  0002-test-Disable-history-test.patch  0003-tests-Disable-pgp.patch  Disable-clock-test.patch  Fix-issues-on-i386-build-by-using-gsize.patch  clock-Use-correct-format-specifier.patch  clock-Use-generated-cast.patch  series  tests-Add-some-logging-to-pgp.c.patch  tests-Remove-unused-variable-in-pgp.c.patch
debian/upstream/: metadata
po/: LINGUAS  POTFILES.in  cs.po  de.po  en_GB.po  es.po  eu.po  fa.po  fr.po  he.po  hi.po  ht.po  hu.po  it.po  ka.po  nl.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po
src/: chatty-application.c  chatty-application.h  chatty-attachment.c  chatty-attachment.h  chatty-attachments-bar.c  chatty-attachments-bar.h  chatty-attachments-view.c  chatty-attachments-view.h  chatty-avatar.c  chatty-avatar.h  chatty-chat-list.c  chatty-chat-list.h  chatty-chat-page.c  chatty-chat-page.h  chatty-chat-view.c  chatty-chat-view.h  chatty-chat.c  chatty-chat.h  chatty-clock.c  chatty-clock.h  chatty-contact-list.c  chatty-contact-list.h  chatty-contact-provider.c  chatty-contact-provider.h  chatty-entry.c  chatty-entry.h  chatty-enums.h  chatty-file-item.c  chatty-file-item.h  chatty-file.c  chatty-file.h  chatty-fp-row.c  chatty-fp-row.h  chatty-header-bar.c  chatty-header-bar.h  chatty-history.c  chatty-history.h  chatty-image-item.c  chatty-image-item.h  chatty-invite-page.c  (+57 more)
src/contrib/: contrib.h  demotaggedentry.c  tagstyle.css
src/css/: style-dark.css  style.css
src/dialogs/: chatty-chat-info.c  chatty-chat-info.h  chatty-info-dialog.c  chatty-info-dialog.h  chatty-ma-account-details.c  chatty-ma-account-details.h  chatty-ma-chat-info.c  chatty-ma-chat-info.h  chatty-mm-chat-info.c  chatty-mm-chat-info.h  chatty-new-chat-dialog.c  chatty-new-chat-dialog.h  chatty-new-muc-dialog.c  chatty-new-muc-dialog.h  chatty-pp-account-details.c  chatty-pp-account-details.h  chatty-pp-chat-info.c  chatty-pp-chat-info.h  chatty-settings-dialog.c  chatty-settings-dialog.h  chatty-wrong-pw-dialog.c  chatty-wrong-pw-dialog.h
src/matrix/: chatty-ma-account.c  chatty-ma-account.h  chatty-ma-buddy.c  chatty-ma-buddy.h  chatty-ma-chat.c  chatty-ma-chat.h  chatty-ma-key-chat.c  chatty-ma-key-chat.h  chatty-matrix.c  chatty-matrix.h  matrix-api.c  matrix-api.h  matrix-db.c  matrix-enc.c  matrix-net.c  matrix-net.h  matrix-utils.c  matrix-utils.h  meson.build
src/mm/: chatty-mm-account-private.h  chatty-mm-account.c  chatty-mm-account.h  chatty-mm-buddy.c  chatty-mm-buddy.h  chatty-mm-chat.c  chatty-mm-chat.h  chatty-mm-notify.c  chatty-mm-notify.h  chatty-mmsd.c  chatty-mmsd.h  chatty-sms-uri.c  chatty-sms-uri.h  meson.build
src/purple/: chatty-pp-account.c  chatty-pp-account.h  chatty-pp-buddy.c  chatty-pp-buddy.h  chatty-pp-chat.c  chatty-pp-chat.h  chatty-pp-utils.c  chatty-pp-utils.h  chatty-purple-notify.c  chatty-purple-request.c  chatty-purple.c  chatty-purple.h  meson.build
src/purple/xeps/: chatty-xep-0313.c
src/ui/: chatty-attachment.ui  chatty-chat-list.ui  chatty-chat-page.ui  chatty-chat-view.ui  chatty-contact-list.ui  chatty-contact-row.ui  chatty-dialog-join-muc.ui  chatty-dialog-new-chat.ui  chatty-dialog-wrong-pw.ui  chatty-file-item.ui  chatty-fp-row.ui  chatty-header-bar.ui  chatty-image-item.ui  chatty-info-dialog.ui  chatty-invite-page.ui  chatty-invite-view.ui  chatty-list-row.ui  chatty-ma-account-details.ui  chatty-ma-chat-info.ui  chatty-main-view.ui  chatty-message-bar.ui  chatty-message-row.ui  chatty-mm-chat-info.ui  chatty-pp-account-details.ui  chatty-pp-chat-info.ui  chatty-progress-button.ui  chatty-selectable-row.ui  chatty-settings-dialog.ui  chatty-side-bar.ui  chatty-verification-page.ui  chatty-verification-view.ui  chatty-window.ui  help-overlay.ui
src/users/: chatty-account.c  chatty-account.h  chatty-contact-private.h  chatty-contact.c  chatty-contact.h  chatty-item.c  chatty-item.h  chatty-mm-account.c  chatty-mm-account.h  chatty-mm-buddy.c  chatty-mmsd.c  chatty-mmsd.h  chatty-pp-account.c  chatty-pp-buddy.c  itu-e212-iso.h
src/xeps/: chatty-xep-0352.c
subprojects/: libcmatrix.wrap
tests/: account.c  clock.c  history.c  matrix-api.c  matrix-db.c  meson.build  message-row.c  mm-account.c  pgp.c  settings.c  sms-uri.c  utils.c
tests/pgp/: chatty-test.gpg.pub  chatty-test.gpg.sec  recipient1.gpg.pub  recipient1.gpg.sec  recipient2.gpg.pub  recipient2.gpg.sec
tests/pgp/attachments/: Postcard_John_Doe.vcf
tests/vcard/: EmptyADRfield.vcf  Postcard_Jane_Doe.vcf  Postcard_John_Doe.vcf  fn_test.vcf  southwest_suites.vcf
